--- a/README
+++ b/README
@@ -1,7 +1,13 @@
 Run the following commands once installed:
 
-    brew install bash-completion
-    brew install jenv
-    <install rvm>
+    brew install bash-completion jenv gpg2
+    # rvm
+    gpg --recv-keys 409B6B1796C275462A1703113804BB82D39DC0E3 7D2BAF1CF37B13E2069D6956105BD0E739499BDB
+    \curl -sSL https://get.rvm.io | bash -s stable
+    # nvm
+    curl -o- https://raw.githubusercontent.com/nvm-sh/nvm/v0.34.0/install.sh | bash
+    # avn (automatic nvm)
+    npm install -g avn avn-nvm avn-n
+    avn setup
     
 Restart your shell
